// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="sc-ebPQXL eFwSHP"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-dGBNLl iDFAlu"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-bIStaS faLyhN"
    >
      <div
        className="sc-hGxJNH cwSeMo"
      />
    </span>
    <span
      className="sc-iYsgxs gqcbPy"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-ebPQXL eFwSHP"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-dGBNLl iDFAlu"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-bIStaS faLyhN"
    >
      <div
        className="sc-hGxJNH cwSeMo"
      />
    </span>
    <span
      className="sc-iYsgxs gqcbPy"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-ebPQXL eFwSHP"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-dGBNLl iDFAlu"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-bIStaS faLyhN"
    >
      <div
        className="sc-hGxJNH cwSeMo"
      />
    </span>
    <span
      className="sc-iYsgxs gqcbPy"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-ebPQXL eFwSHP"
>
  <input
    checked={true}
    className="sc-dGBNLl iDFAlu"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-bIStaS faLyhN"
  >
    <div
      className="sc-hGxJNH cwSeMo"
    />
  </span>
  <span
    className="sc-iYsgxs gqcbPy"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-ebPQXL eFwSHP"
>
  <input
    className="sc-dGBNLl iDFAlu"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-bIStaS faLyhN"
  >
    <div
      className="sc-hGxJNH cwSeMo"
    />
  </span>
  <span
    className="sc-iYsgxs gqcbPy"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="sc-ebPQXL eFwSHP"
      htmlFor="button1"
    >
      <input
        className="sc-dGBNLl iDFAlu"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-bIStaS faLyhN"
      >
        <div
          className="sc-hGxJNH cwSeMo"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="sc-ebPQXL eFwSHP"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-dGBNLl iDFAlu"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-bIStaS faLyhN"
      >
        <div
          className="sc-hGxJNH cwSeMo"
        />
      </span>
      <span
        className="sc-iYsgxs gqcbPy"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-ebPQXL eFwSHP"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-dGBNLl iDFAlu"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-bIStaS faLyhN"
      >
        <div
          className="sc-hGxJNH cwSeMo"
        />
      </span>
      <span
        className="sc-iYsgxs gqcbPy"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-ebPQXL eFwSHP"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-dGBNLl iDFAlu"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-bIStaS faLyhN"
      >
        <div
          className="sc-hGxJNH cwSeMo"
        />
      </span>
      <span
        className="sc-iYsgxs gqcbPy"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
